# proxlb-solver

./: .gitignore  Makefile  README.md  SOLVER_REPORT_EXPERT.html  UNIFIED_SOLVER_PAPER.md  live_config.yaml  proxlb_dump.json  pyproject.toml  unified_results.html
.github/workflows/: test-and-pages.yml
proxlb_solver/: __init__.py  adapter.py  cli.py  loader.py  models.py  planner.py  reporter.py  shadow.py  shadow_reporter.py  simulate.py  solver.py  unified_solver.py  validator.py
scenarios/basic/: already_balanced.yaml  balanciness_aggressive.yaml  balanciness_conservative.yaml  balanciness_level2_trigger.yaml  balanciness_level4_precise.yaml  balanciness_level5_tiebreak.yaml  balanciness_threshold.yaml  cpu_affinity_rebalance.yaml  cpu_assigned_rebalance.yaml  cpu_dual_strategy.yaml  cpu_minimal.yaml  cpu_overcommit_valid.yaml  cpu_psi_rebalance.yaml  cpu_rebalance.yaml  cpu_smart_rebalance.yaml  cpu_threshold.yaml  cpu_threshold_exceeded.yaml  cpu_threshold_moderate.yaml  disk_rebalance.yaml  global_smart_conflict.yaml  global_smart_io_space.yaml  global_smart_psi_pressure.yaml  global_smart_rebalance.yaml  io_psi_bottleneck.yaml  io_smart_rebalance.yaml  local_disk_avoidance.yaml  lxc_rebalance.yaml  memory_psi_thrashing.yaml  memory_smart_rebalance.yaml  memory_threshold.yaml  memory_threshold_exceeded.yaml  prefer_smaller_migration.yaml  priority_balancing.yaml  priority_psi.yaml  psi_vs_usage.yaml  simple_rebalance.yaml  single_vm_move.yaml
scenarios/benchmark/: bin_packing.20-bins.256-capacity.yaml  bin_packing_20x256.yaml
scenarios/constraints/: affinity_fix.yaml  affinity_group.yaml  anti_affinity.yaml  anti_affinity_fix.yaml  constraints_combined_fix.yaml  cpu_evacuate_success.yaml  cpu_psi_anti_affinity.yaml  cpu_reservation.yaml  cpu_smart_maintenance.yaml  evacuate_no_capacity.yaml  evacuate_pin_conflict.yaml  evacuate_success.yaml  lxc_affinity.yaml  maintenance_node.yaml  pin_to_node.yaml  resource_reservation.yaml  soft_affinity.yaml  soft_constraints.yaml  storage_full.yaml  storage_heterogeneous.yaml
scenarios/infeasible/: affinity_anti_affinity_conflict.yaml  affinity_antiaffinity_direct.yaml  affinity_capacity.yaml  affinity_transitive_conflict.yaml  all_maintenance.yaml  anti_affinity_impossible.yaml  cpu_overcommit_exceeded.yaml  cpu_overflow.yaml  hard_affinity_pinning_conflict.yaml  hard_anti_affinity_conflict.yaml  ignore_on_maintenance.yaml  pin_to_maintenance.yaml  pinning_conflict_merged.yaml  ram_overflow.yaml
scenarios/migration/: affinity_cycle.yaml  chain_dependency.yaml  circular_swap.yaml  cpu_affinity_cycle.yaml  evacuate_with_spare.yaml  io_smart_cycle.yaml  (+13 more)
scripts/: benchmark_unified_solver.py  check_issue_1.py  create_benchmark_scenario.py  export_proxlb_data.py  inspect_pve.py  jsonl_to_scenario.py  test_unified_model.py
tests/: conftest.py  test_integration.py  test_planner.py  test_solver.py  utils.py
(+20 files in other folders)
