[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "proxlb-solver"
version = "0.1.1"
description = "CP-SAT based VM placement solver for ProxLB"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Alexander Wirt", email = "alexander.wirt@credativ.de" },
]
requires-python = ">=3.11"
keywords = [
    "proxmox", "vm", "scheduling", "placement", "balancing",
    "cp-sat", "ortools", "proxlb",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Clustering",
]
dependencies = [
    "ortools>=9.9",
    "PyYAML>=6.0",
    "rich>=13.0",
    "pydantic>=2.0",
    # Required at runtime by the active-mode path in shadow.py, which calls
    # `Balancing.balance(...)` — that static API was introduced in 2.1.0.
    "proxlb>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mypy",
    "flake8>=7.0",
    "types-PyYAML",
]

[project.urls]
Homepage = "https://github.com/credativ/proxlb-solver"
Repository = "https://github.com/credativ/proxlb-solver"
"Bug Tracker" = "https://github.com/credativ/proxlb-solver/issues"

[project.scripts]
proxlb-solver        = "proxlb_solver.cli:main"
proxlb-solver-report = "proxlb_solver.shadow_reporter:main"

[tool.setuptools.packages.find]
# Include the library package and any future sub-packages,
# but never ship the test suite to end users.
include = ["proxlb_solver*"]
exclude = ["proxlb_solver.tests*"]

[tool.pytest.ini_options]
# Both test trees are collected:
#   tests/            — scenario-driven integration tests
#   tests/unit/       — unit tests for adapter, shadow mode, constraints
testpaths = ["tests"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["proxlb.*"]
ignore_missing_imports = true
